# blender-copilot

./: .gitignore  CLAUDE.md  LICENSE  README.md  blender_exec.py  pyproject.toml
addon/: __init__.py  blender_manifest.toml
docs/: MAYO_VRC_MANUAL.md  MODELER_KNOWLEDGE_BASE.md
scripts/: blender_auto_start.py  build_dwgx_direct.py
src/blender_copilot/: __init__.py  animation_tools.py  armature_tools.py  blender_manager.py  blender_master_tools.py  curve_tools.py  face_tracking_constants.py  face_tracking_tools.py  geometry_nodes_tools.py  io_tools.py  lighting_tools.py  material_tools.py  measurement_tools.py  modifier_tools.py  physics_tools.py  pipeline_tools.py  render_tools.py  rigify_tools.py  scene_tools.py  script_tools.py  sculpt_advanced_tools.py  sculpt_anatomy_data.py  sculpt_bake_tools.py  server.py  unity_tools.py  uv_tools.py  viewport_tools.py  vrc_constants.py  vrc_tools.py
